# DrunkMate

./: .gitignore  Add.drawio  Dockerfile  DrunkDiagram.drawio  README.md  TZ.xml  docker-compose.yml  pyproject.toml  БД
drunkMate/: project_path_getter.py
drunkMate/api/: __init__.py
drunkMate/api/auth/: __init__.py  contract.py  endpoints.py
drunkMate/api/cocktail/: contract.py  endpoints.py
drunkMate/api/comment/: contract.py  endpoints.py
drunkMate/api/image/: endpoints.py
drunkMate/api/ingredient/: contract.py  endpoints.py
drunkMate/api/tag/: __init__.py  contract.py  endpoints.py
drunkMate/api/user/: contract.py  endpoints.py
drunkMate/classes/: __init__.py  cocktail.py  comment.py  ingredient.py  tag.py  user.py
drunkMate/core/: repository.py  token.py
drunkMate/core/cruds/: cocktail_crud.py  comment_crud.py  ingredient_crud.py  tag_crud.py  user_crud.py
drunkMate/models/: comment.py  ingredient.py  settings.py  tag.py  user.py
drunkMate/service/db/models/: cocktail.py  ingredient.py  user.py
drunkMate/service/db/mongo/: database.py
drunkMate/service/db/postgres/: database.py
drunkMate/startup/: initialization.py
